--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
       <h1 class="visually-hidden">Город Седона</h1>
 
-      <article class="description">
+      <section class="description">
         <div class="description__article article-text">
           <p class="article-text__welcome">Welcome</p>
           <p class="article-text__gorgeous">to the gorgeous</p>
@@ -45,7 +45,7 @@
         <div class="description__text">
           <p class="description__main">Седона-небольшой городок в Аризоне, заслуживающий большего!</p>
         </div>
-      </article>
+      </section>
 
       <section class="advatage">
         <h2 class="advatage__title">Рассмотрим 5 причин, по которым седона круче, чем гранд каньон</h2>
@@ -56,19 +56,19 @@
               <p class="advatage-text__number">№1</p>
               <p class="advatage-text__intro">Седона не аттракцион для туристов, там течет своя жизнь</p>
             </header>
-            <img class="advatage_img" src="#" width="#" height="#" alt="Вид города">
+            <img class="advatage__img" src="#" width="#" height="#" alt="Вид города">
             <ul class="advatage__point">
-              <li class="advatage-point-list">
-                <h3 class="advatage-point-list__title advatage-point-list--house">Жилье</h3>
-                <p class="advatage-point-list__text">Рекомендуем пожить в настоящем мотеле,все как в кино!</p>
+              <li class="advatage__point-list point-list">
+                <h3 class="point-list__title point-list__title--house">Жилье</h3>
+                <p class="point-list__text">Рекомендуем пожить в настоящем мотеле,все как в кино!</p>
               </li>
-              <li class="advatage-point-list">
-                <h3 class="advatage-point-list__title advatage-point-list--souvenir">Сувениры</h3>
-                <p class="advatage-point-list__text">Не только китайского, но и местного производства!</p>
+              <li class="advatage__point-list point-list">
+                <h3 class="point-list__title point-list--souvenir">Сувениры</h3>
+                <p class="point-list__text">Не только китайского, но и местного производства!</p>
               </li>
-              <li class="advatage-point-list">
-                <h3 class="advatage-point-list__title advatage-point-list--food">Еда</h3>
-                <p class="advatage-point-list__text">Всегда заказывайте фирменный бургер, вы не рахочаруетесь!</p>
+              <li class="advatage__point-list point-list">
+                <h3 class="point-list__title point-list--food">Еда</h3>
+                <p class="point-list__text">Всегда заказывайте фирменный бургер, вы не рахочаруетесь!</p>
               </li>
             </ul>
           </li>
