--- a/source/form.html
+++ b/source/form.html
@@ -4,9 +4,7 @@
     <meta charset="utf-8">
     <title>HTML Academy: Sedona</title>
   </head>
-
   <body>
-
     <header class="page-header">
 
       <a><img class="page-header__logo-image" src="#" width="#" height="#" alt="Логотип Седона"></a>
@@ -33,46 +31,14 @@
 
     <main class="page-main">
 
-      <section class="description">        
+      <article class="description">        
         <p class="description__title">Sedona</p>        
-      </section>
-
-    
-      <section class="photo">
-        <h2 class="photo__title">Фото и видео</h2>
-        <p class="photo__title-description">Не можете решиться на путешествие из-за курса? Фотографии помогут Вам забыть о политике и экономике</p>
-        <ul class="photo__list">
-          <li class="photo__view space-view">
-            <img class="space-view__img" src="#" width="#" height="#" alt="Дорога Седоны">
-            <p class="space-view__title">Народные просторы</p>
-            <p class="space-view__autor">Автор фото: Борис</p>
-            <p class="space-view__like">1350</p>
-          </li>
-          <li class="photo__view flora-view">
-            <img class="flora-view__img" src="#" width="#" height="#" alt="Растительность Седоны">
-            <p class="flora-view__title">Местная растительность</p>
-            <p class="flora-view__autor">Автор фото: Сергей</p>
-            <p class="flora-view__like">143</p>
-          </li>
-          <li class="photo__view road-view">
-            <img class="road-view__img" src="#" width="#" height="#" alt="Дорога Седоны">
-            <p class="road-view__title">Дорога на север</p>
-            <p class="road-view__autor">Автор фото: Петр</p>
-            <p class="road-view__like">96</p>
-          </li>
-          <li class="photo__view bridge-view">
-            <img class="bridge-view__img" src="#" width="#" height="#" alt="Дорога Седоны">
-            <p class="bridge-view__title">Мост Дьявола</p>
-            <p class="bridge-view__autor">Автор фото: Антон</p>
-            <p class="bridge-view__like">254</p>
-          </li>
-        </ul>
-
-      </section>
+      </article>
 
     </main>
 
     <footer class="page-footer">
+      
       <div class="page-footer__hashtag">#visitsedona</div>
       <div class="page-footer__social social">
         <ul class="social__list">
