--- a/source/form.html
+++ b/source/form.html
@@ -31,14 +31,14 @@
 
     <main class="page-main">
 
-      <article class="description">        
+      <section class="description">        
         <p class="description__title">Sedona</p>        
-      </article>
+      </section>
 
     </main>
 
     <footer class="page-footer">
-      
+
       <div class="page-footer__hashtag">#visitsedona</div>
       <div class="page-footer__social social">
         <ul class="social__list">
