--- a/source/photo.html
+++ b/source/photo.html
@@ -33,9 +33,9 @@
 
     <main class="page-main">
 
-      <article class="description">        
+      <section class="description">        
         <p class="description__title">Sedona</p>        
-      </article>
+      </section>
 
     
       <section class="photo">
@@ -46,25 +46,25 @@
             <img class="space-view__img" src="#" width="#" height="#" alt="Дорога Седоны">
             <p class="space-view__title">Народные просторы</p>
             <p class="space-view__autor">Автор фото: Борис</p>
-            <p class="space-view__like--like-pic">1350</p>
+            <p class="space-view__like">1350</p>
           </li>
           <li class="photo__view flora-view">
             <img class="flora-view__img" src="#" width="#" height="#" alt="Растительность Седоны">
             <p class="flora-view__title">Местная растительность</p>
             <p class="flora-view__autor">Автор фото: Сергей</p>
-            <p class="flora-view__like--like-pic">143</p>
+            <p class="flora-view__like">143</p>
           </li>
           <li class="photo__view road-view">
             <img class="road-view__img" src="#" width="#" height="#" alt="Дорога Седоны">
             <p class="road-view__title">Дорога на север</p>
             <p class="road-view__autor">Автор фото: Петр</p>
-            <p class="road-view__like--like-pic">96</p>
+            <p class="road-view__like">96</p>
           </li>
           <li class="photo__view bridge-view">
             <img class="bridge-view__img" src="#" width="#" height="#" alt="Дорога Седоны">
             <p class="bridge-view__title">Мост Дьявола</p>
             <p class="bridge-view__autor">Автор фото: Антон</p>
-            <p class="bridge-view__like--like-pic">254</p>
+            <p class="bridge-view__like">254</p>
           </li>
         </ul>
 
