--- a/source/index.html
+++ b/source/index.html
@@ -63,11 +63,11 @@
                 <p class="point-list__text">Рекомендуем пожить в настоящем мотеле,все как в кино!</p>
               </li>
               <li class="advatage__point-list point-list">
-                <h3 class="point-list__title point-list--souvenir">Сувениры</h3>
+                <h3 class="point-list__title point-list__title--souvenir">Сувениры</h3>
                 <p class="point-list__text">Не только китайского, но и местного производства!</p>
               </li>
               <li class="advatage__point-list point-list">
-                <h3 class="point-list__title point-list--food">Еда</h3>
+                <h3 class="point-list__title point-list__title--food">Еда</h3>
                 <p class="point-list__text">Всегда заказывайте фирменный бургер, вы не рахочаруетесь!</p>
               </li>
             </ul>
