--- a/source/photo.html
+++ b/source/photo.html
@@ -3,23 +3,23 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Sedona</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
   </head>
 
   <body>
 
     <header class="page-header">
 
-      <a><img class="page-header__logo-image" src="#" width="#" height="#" alt="Логотип Седона"></a>
-
       <nav class="main-nav">
-        <button class="main-nav__toggle" type="button">Открыть меню</button>
+        <button class="main-nav__toggle" type="button">Закрыть меню</button>
 
         <ul class="main-nav__list site-list">
           <li class="site-list__item">
-            <a>Главная</a>
+            <a href="index.html">Главная</a>
           </li>
           <li class="site-list__item">
-            <a href="photo.html">Фото и видео</a>
+            <a>Фото и видео</a>
           </li>
           <li class="site-list__item">
             <a href="form.html">Форма отзыва</a>
@@ -29,12 +29,21 @@
           </li>
         </ul>
       </nav>
+
+      <nav class="main-header">
+        <a href="index.html"><img class="page-header__logo-image" src="img/logo-sedona-tablet.svg" width="102" height="83" alt="Логотип Седона"></a>
+        <button class="main-nav__toggle" type="button">Открыть меню</button>
+     </nav>
     </header>
 
     <main class="page-main">
 
       <section class="description">
-        <p class="description__title">Sedona</p>
+        <div class="description__img index-image">
+          <img class="index-image_main" src="img/bg-back-mobile@1x.jpg" width="" height="" alt="Горы Седоны">
+          <img class="index-image_text" src="img/text-sedona.svg" width="229" height="39" alt="Текст описание">
+          <img class="index-image_triangle" src="img/bg-intro-triangle-mobile.svg" width="320" height="30" alt="Обрамление картинки">
+        </div>
       </section>
 
       <section class="photo">
@@ -42,28 +51,28 @@
         <p class="photo__title-description">Не можете решиться на путешествие из-за курса? Фотографии помогут Вам забыть о политике и экономике</p>
         <ul class="photo__list">
           <li class="photo__view space-view">
-            <img class="space-view__img" src="#" width="#" height="#" alt="Дорога Седоны">
-            <p class="space-view__title">Народные просторы</p>
-            <p class="space-view__autor">Автор фото: Борис</p>
-            <p class="space-view__like">1350</p>
+            <a href="#"><img class="space-view__img" src="img/photo-sunset-mobile@1x.jpg" width="280" height="280" alt="Закат"></a>
+            <p class="photo-view__title">Неродные просторы</p>
+            <p class="photo-view__autor">Автор фото: Борис</p>
+            <p class="photo-view__like">1350</p>
           </li>
           <li class="photo__view flora-view">
-            <img class="flora-view__img" src="#" width="#" height="#" alt="Растительность Седоны">
-            <p class="flora-view__title">Местная растительность</p>
-            <p class="flora-view__autor">Автор фото: Сергей</p>
-            <p class="flora-view__like">143</p>
+            <a href="#"><img class="flora-view__img" src="img/photo-cactus-mobile@1x.jpg" width="280" height="280" alt="Растительность Седоны"></a>
+            <p class="photo-view__title">Местная растительность</p>
+            <p class="photo-view__autor">Автор фото: Сергей</p>
+            <p class="photo-view__like">143</p>
           </li>
           <li class="photo__view road-view">
-            <img class="road-view__img" src="#" width="#" height="#" alt="Дорога Седоны">
-            <p class="road-view__title">Дорога на север</p>
-            <p class="road-view__autor">Автор фото: Петр</p>
-            <p class="road-view__like">96</p>
+            <a href="#"><img class="road-view__img" src="img/photo-roads-mobile@1x.jpg" width="280" height="280" alt="Дорога Седоны"></a>
+            <p class="photo-view__title">Дорога на север</p>
+            <p class="photo-view__autor">Автор фото: Петр</p>
+            <p class="photo-view__like">96</p>
           </li>
           <li class="photo__view bridge-view">
-            <img class="bridge-view__img" src="#" width="#" height="#" alt="Дорога Седоны">
-            <p class="bridge-view__title">Мост Дьявола</p>
-            <p class="bridge-view__autor">Автор фото: Антон</p>
-            <p class="bridge-view__like">254</p>
+            <a href="#"><img class="bridge-view__img" src="img/photo-bridge-mobile@1x.jpg" width="280" height="280" alt="Мост Дьявола"></a>
+            <p class="photo-view__title">Мост Дьявола</p>
+            <p class="photo-view__autor">Автор фото: Антон</p>
+            <p class="photo-view__like">254</p>
           </li>
         </ul>
 
@@ -76,20 +85,26 @@
       <div class="page-footer__social social">
         <ul class="social__list">
           <li class="social__item">
-            <a class="social__link social__link--twitter" href="#">Мы в Твиттер</a>
+            <a class="social__link social__link--twitter" href="#" aria-label="Мы в Твиттер">
+              <img src="img/icon-twitter.svg" width="19" height="14" alt="Кнопка Твиттер">
+            </a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link--facebook" href="#">Мы в Фейсбуке</a>
+            <a class="social__link social__link--facebook" href="#" aria-label="Мы в Фейсбуке">
+              <img src="img/icon-facebook.svg" width="10" height="18" alt="Кнопка Фейсбук">
+            </a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link--youtube" href="#">Мы в Ютубе</a>
+            <a class="social__link social__link--youtube" href="#" aria-label="Мы в Ютубе">
+              <img src="img/icon-youtube.svg" width="20" height="14" alt="Кнопка Ютуб">
+            </a>
           </li>
         </ul>
       </div>
       <div class="page-footer__copyright copyright">
         <b class="copyright__text">Разработано:</b>
-        <a class="copyright__link" href="https://htmlacademy.ru" aria-label="Html Академия">
-          <img src="#" width="#" height="#" alt="Знак Html Академия">
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Html Академия">
+          <img src="img/htmlacademy.svg" width="28" height="36" alt="Знак Html Академия">
         </a>
       </div>
 
