--- a/source/form.html
+++ b/source/form.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>HTML Academy: Sedona</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/normalize_minimized.css">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
   </head>
 
