--- a/source/form.html
+++ b/source/form.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <title>HTML Academy: Sedona</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/normalize_minimized.css">
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet">
   </head>
 
@@ -31,8 +30,8 @@
       </nav>
 
       <nav class="main-header">
-        <a href="index.html"><img class="page-header__logo-image" src="img/logo-sedona-tablet.svg" width="102" height="83" alt="Логотип Седона"></a>
-        <button class="main-nav__toggle" type="button">Открыть меню</button>
+        <a href="index.html"><img class="main-header__logo-image" src="img/logo-sedona-tablet.svg" width="102" height="83" alt="Логотип Седона"></a>
+        <button class="main-header__toggle" type="button">Открыть меню</button>
       </nav>
     </header>
 
