--- a/source/photo.html
+++ b/source/photo.html
@@ -50,25 +50,25 @@
         <h2 class="photo__title">Фото и видео</h2>
         <p class="photo__title-description">Не можете решиться на путешествие из-за курса? Фотографии помогут Вам забыть о политике и экономике</p>
         <ul class="photo__list">
-          <li class="photo__view">
+          <li class="photo__view photo-view">
             <a href="#"><img class="photo-view__img" src="img/photo-sunset-mobile@1x.jpg" width="280" height="280" alt="Закат"></a>
             <p class="photo-view__title">Неродные просторы</p>
             <p class="photo-view__autor">Автор фото: Борис</p>
             <p class="photo-view__like">1350</p>
           </li>
-          <li class="photo__view">
+          <li class="photo__view photo-view">
             <a href="#"><img class="photo-view__img" src="img/photo-cactus-mobile@1x.jpg" width="280" height="280" alt="Растительность Седоны"></a>
             <p class="photo-view__title">Местная растительность</p>
             <p class="photo-view__autor">Автор фото: Сергей</p>
             <p class="photo-view__like">143</p>
           </li>
-          <li class="photo__view">
+          <li class="photo__view photo-view">
             <a href="#"><img class="photo-view__img" src="img/photo-roads-mobile@1x.jpg" width="280" height="280" alt="Дорога Седоны"></a>
             <p class="photo-view__title">Дорога на север</p>
             <p class="photo-view__autor">Автор фото: Петр</p>
             <p class="photo-view__like">96</p>
           </li>
-          <li class="photo__view">
+          <li class="photo__view photo-view">
             <a href="#"><img class="photo-view__img" src="img/photo-bridge-mobile@1x.jpg" width="280" height="280" alt="Мост Дьявола"></a>
             <p class="photo-view__title">Мост Дьявола</p>
             <p class="photo-view__autor">Автор фото: Антон</p>
