--- a/source/form.html
+++ b/source/form.html
@@ -27,22 +27,19 @@
           <li class="site-list__item">
             <a href="#">HTML Academy</a>
           </li>
+          <li class="main-nav__logo site-list__item site-list__item--logo">
+            <a class="main-nav__logo-image"></a>
+            <button class="main-nav__toggle" type="button">Открыть меню</button>
+          </li>
         </ul>
       </nav>
 
-      <nav class="main-header">
-        <a href="index.html"><img class="main-header__logo-image" src="img/logo-sedona-tablet.svg" width="102" height="83" alt="Логотип Седона"></a>
-        <button class="main-header__toggle" type="button">Открыть меню</button>
-      </nav>
     </header>
 
     <main class="page-main">
 
       <section class="description">
-        <div class="description__img index-image">
-          <img class="index-image_main" src="img/bg-back-mobile@1x.jpg" width="" height="" alt="Горы Седоны">
-          <img class="index-image_text" src="img/text-sedona.svg" width="229" height="39" alt="Текст описание">
-          <img class="index-image_triangle" src="img/bg-intro-triangle-mobile.svg" width="320" height="30" alt="Обрамление картинки">
+        <div class="description__img-photo">
         </div>
       </section>
 
