--- a/source/index.html
+++ b/source/index.html
@@ -29,8 +29,8 @@
           <a href="#">HTML Academy</a>
         </li>
         <li class="main-nav__logo site-list__item site-list__item--logo">
-           <a><img class="main-header__logo-image" src="img/logo-sedona-tablet.svg" width="102" height="83" alt="Логотип Седона"></a>
-            <button class="main-header__toggle" type="button">Открыть меню</button>
+          <a class="main-nav__logo-image"></a>
+          <button class="main-nav__toggle" type="button">Открыть меню</button>
         </li>
       </ul>
     </nav>
@@ -56,55 +56,61 @@
         <li class="advantage__item advantage__item--city">
           <div class="advantage__wraper">
             <div class="advantage__description advantage__description--city advantage-text">
-              <p class="advantage-text__title">Настоящий городок</p>
+              <p class="advantage-text__title advantage-text__title--city">Настоящий городок</p>
               <p class="advantage-text__number">№1</p>
-              <p class="advantage-text__intro">Седона не аттракцион для туристов, там течет своя жизнь</p>
+              <p class="advantage-text__intro advantage-text__intro--city">Седона не аттракцион для туристов, там течет своя жизнь</p>
             </div>
-            <div class="advantage__img"></div>
+            <div class="advantage__img advantage__img--city"></div>
           </div>
           <ul class="advantage__point">
             <li class="advantage__point-list point-list">
               <h3 class="point-list__title point-list__title--house">Жилье</h3>
-              <p class="point-list__text">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+              <p class="point-list__text point-list__text--house">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
             </li>
             <li class="advantage__point-list advantage__point-list--souvenir point-list">
               <h3 class="point-list__title point-list__title--souvenir">Сувениры</h3>
-              <p class="point-list__text">Не только китайского, но и местного производства!</p>
+              <p class="point-list__text point-list__text--souvenir">Не только китайского, но и местного производства!</p>
             </li>
             <li class="advantage__point-list advantage__point-list--food point-list">
               <h3 class="point-list__title point-list__title--food">Еда</h3>
-              <p class="point-list__text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+              <p class="point-list__text point-list__text--food">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
             </li>
           </ul>
         </li>
         <li class="advantage__item">
-          <header class="advantage__description advantage-text">
-            <p class="advantage-text__title">Там есть мост дьявола</p>
-            <p class="advantage-text__number">№2</p>
-            <p class="advantage-text__intro">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
-          </header>
-          <img class="" src="img/main-bridge-mobile@1x.jpg" width="320" height="260" alt="Мост дьявола">
+          <div class="advantage__wraper advantage__wraper--bridge">
+            <header class="advantage__description advantage__description--bridge advantage-text">
+              <p class="advantage-text__title advantage-text__title--bridge">Там есть мост дьявола</p>
+              <p class="advantage-text__number">№2</p>
+              <p class="advantage-text__intro advantage-text__intro--bridge">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+            </header>
+            <div class="advantage__img advantage__img--bridge"></div>
+          </div>
         </li>
-        <li class="advantage__item">
-          <header class="advantage__description advantage__description--area advantage-text">
-            <p class="advantage-text__title">Небольшая площадь</p>
-            <p class="advantage-text__number">№3</p>
-            <p class="advantage-text__intro">ВСЕ интересные места находятся очень близко</p>
-          </header>
-        </li>
-        <li class="advantage__item">
-          <header class="advantage__description advantage__description--road advantage-text">
-            <p class="advantage-text__title">Красивая дорога</p>
-            <p class="advantage-text__number">№4</p>
-            <p class="advantage-text__intro">Ехать в седону из Лас-Вегаса совсем не скучно!</p>
-          </header>
-        </li>
-        <li class="advantage__item">
-          <header class="advantage__description advantage__description--tourists advantage-text">
-            <p class="advantage-text__title">Мало туристов</p>
-            <p class="advantage-text__number">№5</p>
-            <p class="advantage-text__intro">Большинство едет в Гранд Каньон и толпится там</p>
-          </header>
+        <li >
+          <ul class="advantage__wraper-bottom">
+            <li class="advantage__item">
+              <header class="advantage__description advantage__description--area advantage-text">
+                <p class="advantage-text__title">Небольшая площадь</p>
+                <p class="advantage-text__number">№3</p>
+                <p class="advantage-text__intro advantage-text__intro--area">ВСЕ интересные места находятся очень близко</p>
+              </header>
+            </li>
+            <li class="advantage__item">
+              <header class="advantage__description advantage__description--road advantage-text">
+                <p class="advantage-text__title">Красивая дорога</p>
+                <p class="advantage-text__number">№4</p>
+                <p class="advantage-text__intro advantage-text__intro--road">Ехать в седону из Лас-Вегаса совсем не скучно!</p>
+              </header>
+            </li>
+            <li class="advantage__item">
+              <header class="advantage__description advantage__description--tourists advantage-text">
+                <p class="advantage-text__title advantage-text__title--tourists">Мало туристов</p>
+                <p class="advantage-text__number">№5</p>
+                <p class="advantage-text__intro advantage-text__intro--tourists">Большинство едет в Гранд Каньон и толпится там</p>
+              </header>
+            </li>
+          </ul>
         </li>
       </ul>
     </section>
@@ -112,8 +118,7 @@
     <section class="book">
       <div class="book__form">
         <h3 class="book__title">Заитересовались?</h3>
-        <p class="book__action">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в
-          Седоне</p>
+        <p class="book__action">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
         <a class="book__write button" href="#">Найти гостиницу</a>
       </div>
     </section>
