--- a/source/form.html
+++ b/source/form.html
@@ -11,8 +11,8 @@
   <body>
     <header class="page-header">
 
-      <nav class="main-nav">
-        <button class="main-nav__toggle" type="button">Закрыть меню</button>
+      <nav class="main-nav main-nav--closed">
+        <button class="main-nav__toggle main-nav__toggle--close" type="button"><span class="visually-hidden">Закрыть меню</span></button>
 
         <ul class="main-nav__list site-list">
           <li class="site-list__item">
@@ -29,7 +29,7 @@
           </li>
           <li class="main-nav__logo site-list__item site-list__item--logo">
             <a class="main-nav__logo-image"></a>
-            <button class="main-nav__toggle" type="button">Открыть меню</button>
+            <button class="main-nav__toggle main-nav__toggle--open" type="button"><span class="visually-hidden">Открыть меню</span></button>
           </li>
         </ul>
       </nav>
