--- a/source/index.html
+++ b/source/index.html
@@ -13,11 +13,11 @@
   <header class="page-header">
 
     <nav class="main-nav">
-      <button class="main-nav__toggle" type="button">Закрыть меню</button>
+      <button class="main-nav__toggle main-nav__toggle--close" type="button"><span class="visually-hidden">Закрыть меню</span></button>
 
       <ul class="main-nav__list site-list">
         <li class="site-list__item">
-          <a>Главная</a>
+          <a href="#">Главная</a>
         </li>
         <li class="site-list__item">
           <a href="photo.html">Фото и видео</a>
@@ -30,7 +30,7 @@
         </li>
         <li class="main-nav__logo site-list__item site-list__item--logo">
           <a class="main-nav__logo-image"></a>
-          <button class="main-nav__toggle" type="button">Открыть меню</button>
+          <button class="main-nav__toggle main-nav__toggle--open" type="button"><span class="visually-hidden">Открыть меню</span></button>
         </li>
       </ul>
     </nav>
@@ -88,29 +88,31 @@
           </div>
         </li>
         <li >
-          <ul class="advantage__wraper-bottom">
-            <li class="advantage__item">
-              <header class="advantage__description advantage__description--area advantage-text">
-                <p class="advantage-text__title">Небольшая площадь</p>
-                <p class="advantage-text__number">№3</p>
-                <p class="advantage-text__intro advantage-text__intro--area">ВСЕ интересные места находятся очень близко</p>
-              </header>
-            </li>
-            <li class="advantage__item">
-              <header class="advantage__description advantage__description--road advantage-text">
-                <p class="advantage-text__title">Красивая дорога</p>
-                <p class="advantage-text__number">№4</p>
-                <p class="advantage-text__intro advantage-text__intro--road">Ехать в седону из Лас-Вегаса совсем не скучно!</p>
-              </header>
-            </li>
-            <li class="advantage__item">
-              <header class="advantage__description advantage__description--tourists advantage-text">
-                <p class="advantage-text__title advantage-text__title--tourists">Мало туристов</p>
-                <p class="advantage-text__number">№5</p>
-                <p class="advantage-text__intro advantage-text__intro--tourists">Большинство едет в Гранд Каньон и толпится там</p>
-              </header>
-            </li>
-          </ul>
+          <div class="advantage__wraper-bottom">
+            <ul class="advantage__wraper-bottom--item">
+              <li class="advantage__item">
+                <header class="advantage__description advantage__description--area advantage-text">
+                  <p class="advantage-text__title">Небольшая площадь</p>
+                  <p class="advantage-text__number">№3</p>
+                  <p class="advantage-text__intro advantage-text__intro--area">ВСЕ интересные места находятся очень близко</p>
+                </header>
+              </li>
+              <li class="advantage__item">
+                <header class="advantage__description advantage__description--road advantage-text">
+                  <p class="advantage-text__title">Красивая дорога</p>
+                  <p class="advantage-text__number">№4</p>
+                  <p class="advantage-text__intro advantage-text__intro--road">Ехать в седону из Лас-Вегаса совсем не скучно!</p>
+                </header>
+              </li>
+              <li class="advantage__item">
+                <header class="advantage__description advantage__description--tourists advantage-text">
+                  <p class="advantage-text__title advantage-text__title--tourists">Мало туристов</p>
+                  <p class="advantage-text__number">№5</p>
+                  <p class="advantage-text__intro advantage-text__intro--tourists">Большинство едет в Гранд Каньон и толпится там</p>
+                </header>
+              </li>
+            </ul>
+          </div>
         </li>
       </ul>
     </section>
