Добавлена форма отзыва

--- a/source/index.html
+++ b/source/index.html
@@ -32,9 +32,9 @@
         <li class="main-nav__logo site-list__item site-list__item--logo">
           <a class="main-nav__logo-image">
             <picture>
-              <source media="(min-width: 1200px)" srcset="../../img/logo-sedona-desktop.svg">
-              <source media="(min-width: 768px)" srcset="../../img/logo-sedona-tablet.svg">
-              <img src="../../img/logo-sedona-mobile.svg" width="102" height="83" alt="Лотип Седона">
+              <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
+              <source media="(min-width: 768px)" srcset="img/logo-sedona-tablet.svg">
+              <img src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Лотип Седона">
             </picture>
           </a>
           <button class="main-nav__toggle main-nav__toggle--open" type="button"><span class="visually-hidden">Открыть меню</span></button>
@@ -62,16 +62,16 @@
       <ul class="advantage__list">
         <li class="advantage__item advantage__item--city">
           <div class="advantage__wraper">
-            <div class="advantage__description advantage__description--city advantage-text">
+            <header class="advantage__description advantage__description--city advantage-text">
               <p class="advantage-text__title advantage-text__title--city">Настоящий городок</p>
               <p class="advantage-text__number">— №1 —</p>
               <p class="advantage-text__intro advantage-text__intro--city">Седона не аттракцион для туристов, там течет своя жизнь</p>
-            </div>
+            </header>
             <div class="advantage__img ">
               <picture>
-                <source media="(min-width: 1200px)" srcset="../../img/main-city-desktop@1x.jpg 1x, ../../img/main-city-desktop@2x.jpg 2x">
-                <source media="(min-width: 768px)" srcset="../../img/main-city-tablet@1x.jpg 1x, ../../img/main-city-tablet@2x.jpg 2x">
-                <img class="advantage__img--city" src="../../img/main-city-mobile@1x.jpg" srcset="../../img/main-city-mobile@2x.jpg 2x" alt="Город Седона">
+                <source media="(min-width: 1200px)" srcset="img/main-city-desktop@1x.jpg 1x, img/main-city-desktop@2x.jpg 2x">
+                <source media="(min-width: 768px)" srcset="img/main-city-tablet@1x.jpg 1x, img/main-city-tablet@2x.jpg 2x">
+                <img class="advantage__img--city" src="img/main-city-mobile@1x.jpg" srcset="img/main-city-mobile@2x.jpg 2x" alt="Город Седона">
               </picture>
             </div>
           </div>
@@ -130,9 +130,9 @@
             </header>
             <div class="advantage__img advantage__img--bridge">
               <picture>
-                <source media="(min-width: 1200px)" srcset="../../img/main-bridge-desktop@1x.jpg 1x, ../../img/main-bridge-desktop@2x.jpg 2x">
-                <source media="(min-width: 768px)" srcset="../../img/main-bridge-tablet@1x.jpg 1x, ../../img/main-bridge-tablet@2x.jpg 2x">
-                <img class="advantage__img--bridge" src="../../img/main-bridge-mobile@1x.jpg" srcset="../../img/main-bridge-mobile@2x.jpg 2x" alt="Мост дьявола">
+                <source media="(min-width: 1200px)" srcset="img/main-bridge-desktop@1x.jpg 1x, img/main-bridge-desktop@2x.jpg 2x">
+                <source media="(min-width: 768px)" srcset="img/main-bridge-tablet@1x.jpg 1x, img/main-bridge-tablet@2x.jpg 2x">
+                <img class="advantage__img--bridge" src="img/main-bridge-mobile@1x.jpg" srcset="img/main-bridge-mobile@2x.jpg 2x" alt="Мост дьявола">
               </picture>
             </div>
           </div>
