--- a/source/photo.html
+++ b/source/photo.html
@@ -33,9 +33,9 @@
           <li class="main-nav__logo site-list__item site-list__item--logo">
             <a class="main-nav__logo-image">
               <picture>
-                <source media="(min-width: 1200px)" srcset="../../img/logo-sedona-desktop.svg">
-                <source media="(min-width: 768px)" srcset="../../img/logo-sedona-tablet.svg">
-                <img src="../../img/logo-sedona-mobile.svg" width="102" height="83" alt="Лотип Седона">
+                <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
+                <source media="(min-width: 768px)" srcset="img/logo-sedona-tablet.svg">
+                <img src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Лотип Седона">
               </picture>
             </a>
             <button class="main-nav__toggle main-nav__toggle--open" type="button"><span class="visually-hidden">Открыть меню</span></button>
@@ -61,11 +61,10 @@
 
             <a  href="#" class="photo-view__img">
               <picture>
-                <source media="(min-width: 1200px)" srcset="../../img/photo-sunset-desktop@1x.jpg 1x, ../../img/photo-sunset-desktop@2x.jpg 2x">
-                <source media="(min-width: 768px)" srcset="../../img/photo-sunset-tablet@1x.jpg 1x, ../../img/photo-sunset-tablet@2x.jpg 2x">
-                <img class="photo-view__img--sunset" src="../../img/photo-sunset-mobile@1x.jpg" srcset="../../img/photo-sunset-mobile@2x.jpg 2x" min-width="280" height="auto" alt="Закат Седоны">
+                <source media="(min-width: 1200px)" srcset="img/photo-sunset-desktop@1x.jpg 1x, img/photo-sunset-desktop@2x.jpg 2x">
+                <source media="(min-width: 768px)" srcset="img/photo-sunset-tablet@1x.jpg 1x, img/photo-sunset-tablet@2x.jpg 2x">
+                <img class="photo-view__img--sunset" src="img/photo-sunset-mobile@1x.jpg" srcset="img/photo-sunset-mobile@2x.jpg 2x" min-width="280" height="auto" alt="Закат Седоны">
               </picture>
-
             </a>
 
             <div class="photo-view__caption">
@@ -91,9 +90,9 @@
 
             <a href="#" class="photo-view__img">
               <picture>
-                <source media="(min-width: 1200px)" srcset="../../img/photo-cactus-desktop@1x.jpg 1x, ../../img/photo-cactus-desktop@2x.jpg 2x">
-                <source media="(min-width: 768px)" srcset="../../img/photo-cactus-tablet@1x.jpg 1x, ../../img/photo-cactus-tablet@2x.jpg 2x">
-                <img class="photo-view__img--flora" src="../../img/photo-cactus-mobile@1x.jpg" srcset="../../img/photo-cactus-mobile@2x.jpg 2x" alt="Растительность Седоны">
+                <source media="(min-width: 1200px)" srcset="img/photo-cactus-desktop@1x.jpg 1x, img/photo-cactus-desktop@2x.jpg 2x">
+                <source media="(min-width: 768px)" srcset="img/photo-cactus-tablet@1x.jpg 1x, img/photo-cactus-tablet@2x.jpg 2x">
+                <img class="photo-view__img--flora" src="img/photo-cactus-mobile@1x.jpg" srcset="img/photo-cactus-mobile@2x.jpg 2x" alt="Растительность Седоны">
               </picture>
             </a>
 
@@ -120,9 +119,9 @@
 
             <a href="#" class="photo-view__img">
               <picture>
-                <source media="(min-width: 1200px)" srcset="../../img/photo-roads-desktop@1x.jpg 1x, ../../img/photo-roads-desktop@2x.jpg 2x">
-                <source media="(min-width: 768px)" srcset="../../img/photo-roads-tablet@1x.jpg 1x, ../../img/photo-roads-tablet@2x.jpg 2x">
-                <img class="photo-view__img--road" src="../../img/photo-roads-mobile@1x.jpg" srcset="../../img/photo-roads-mobile@2x.jpg 2x" alt="Дорога Седоны">
+                <source media="(min-width: 1200px)" srcset="img/photo-roads-desktop@1x.jpg 1x, img/photo-roads-desktop@2x.jpg 2x">
+                <source media="(min-width: 768px)" srcset="img/photo-roads-tablet@1x.jpg 1x, img/photo-roads-tablet@2x.jpg 2x">
+                <img class="photo-view__img--road" src="img/photo-roads-mobile@1x.jpg" srcset="img/photo-roads-mobile@2x.jpg 2x" alt="Дорога Седоны">
               </picture>
             </a>
 
@@ -149,9 +148,9 @@
 
             <a href="#" class="photo-view__img">
               <picture>
-                <source media="(min-width: 1200px)" srcset="../../img/photo-bridge-desktop@1x.jpg 1x, ../../img/photo-bridge-desktop@2x.jpg 2x">
-                <source media="(min-width: 768px)" srcset="../../img/photo-bridge-tablet@1x.jpg 1x, ../../img/photo-bridge-tablet@2x.jpg 2x">
-                <img class="photo-view__img--bridge" src="../../img/photo-bridge-mobile@1x.jpg" srcset="../../img/photo-bridge-mobile@2x.jpg 2x" alt="Мост Дьявола">
+                <source media="(min-width: 1200px)" srcset="img/photo-bridge-desktop@1x.jpg 1x, img/photo-bridge-desktop@2x.jpg 2x">
+                <source media="(min-width: 768px)" srcset="img/photo-bridge-tablet@1x.jpg 1x, img/photo-bridge-tablet@2x.jpg 2x">
+                <img class="photo-view__img--bridge" src="img/photo-bridge-mobile@1x.jpg" srcset="img/photo-bridge-mobile@2x.jpg 2x" alt="Мост Дьявола">
               </picture>
             </a>
 
