--- a/source/form.html
+++ b/source/form.html
@@ -31,9 +31,9 @@
           <li class="main-nav__logo site-list__item site-list__item--logo">
             <a class="main-nav__logo-image">
               <picture>
-                <source media="(min-width: 1200px)" srcset="../../img/logo-sedona-desktop.svg">
-                <source media="(min-width: 768px)" srcset="../../img/logo-sedona-tablet.svg">
-                <img src="../../img/logo-sedona-mobile.svg" width="102" height="83" alt="Лотип Седона">
+                <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
+                <source media="(min-width: 768px)" srcset="img/logo-sedona-tablet.svg">
+                <img src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Лотип Седона">
               </picture>
             </a>
             <button class="main-nav__toggle main-nav__toggle--open" type="button"><span class="visually-hidden">Открыть меню</span></button>
@@ -48,6 +48,138 @@
       <section class="description">
         <div class="description__img-photo">
         </div>
+      </section>
+
+      <section class="form">
+        <div>
+          <h2 class="form__main-title">
+            Оставьте свой отзыв
+          </h2>
+          <p class="form__title-description">
+            Помогите нашим отелям стать лучше! оставьте отзыв о них,<span class="form__break"><br></span>а также о посещенных вами достопримечательностях
+          </p>
+        </div>
+
+        <form class="form__filling">
+          <fieldset class="form__unit form__unit--introduction">
+            <legend class="form__title">Представьтесь:</legend>
+
+            <div class="form__introduction form__introduction--introduction">
+              <label for="user-name">Имя*:</label>
+              <input class="form__introduction-field form__field" id="user-name" type="text" name="name" placeholder="Петр" required>
+            </div>
+            <div class="form__introduction form__introduction--introduction">
+              <label for="user-surname">Фамилия*:</label>
+              <input class="form__introduction-field form__field" id="user-surname" type="text" name="surname" placeholder="Иванов" required>
+            </div>
+            <div class="form__introduction form__introduction--introduction">
+              <label for="user-patronymic">Отчество:</label>
+              <input class="form__introduction-field form__field" id="user-patronymic" type="text" name="patronymic" placeholder="Александрович">
+            </div>
+
+          </fieldset>
+
+          <fieldset class="form__unit form__unit--contact">
+            <legend class="form__title">Контактная информация:</legend>
+
+            <div class="form__introduction form__introduction--contact">
+              <label for="user-number">Контактный телефон*:</label>
+              <div class="form_contact-wrapper">
+                <input class="form__contact-number form__field" id="user-number" type="text" name="phone-number" placeholder="Введите телефон" required>
+                <div class="form_contact-image">
+                  <svg class="form_contact-image--phone" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="18px" height="18px" viewBox="0 0 18 18" enable-background="new 0 0 18 18" xml:space="preserve">
+                    <g id="Page-1">
+                      <g id="Icons-Communication" transform="translate(-85.000000, -126.000000)">
+                        <g id="phone" transform="translate(85.000000, 126.000000)">
+                          <path id="Shape" fill="#010101" d="M3.6,7.8C5,10.6,7.4,12.9,10.2,14.4l2.2-2.2c0.3-0.3,0.699-0.4,1-0.2c1.1,0.4,2.3,0.6,3.6,0.6 c0.6,0,1,0.4,1,1V17c0,0.6-0.4,1-1,1C7.6,18,0,10.4,0,1c0-0.6,0.4-1,1-1h3.5c0.6,0,1,0.4,1,1c0,1.2,0.2,2.4,0.6,3.6 c0.1,0.3,0,0.7-0.2,1L3.6,7.8L3.6,7.8z"/>
+                        </g>
+                      </g>
+                    </g>
+                  </svg>
+                </div>
+              </div>
+            </div>
+            <div class="form__introduction form__introduction--contact">
+              <label for="user-email">Электронная почта*:</label>
+              <div class="form_contact-wrapper">
+                <input class="form__contact-email form__field" id="user-email" type="text" name="email" placeholder="Введите e-mail" required>
+                <div class="form_contact-image">
+                  <svg class="form_contact-image--email" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="16px" height="16px" viewBox="0 0 16 16" enable-background="new 0 0 16 16" xml:space="preserve">
+                    <path d="M8,10c-0.266,0-0.5-0.094-1-0.336L0,6v7c0,0.55,0.45,1,1,1h14c0.55,0,1-0.45,1-1V6L9,9.664C8.5,9.906,8.266,10,8,10z M15,2 H1C0.45,2,0,2.45,0,3v0.758l8,4.205l8-4.205V3C16,2.45,15.55,2,15,2z"/>
+                  </svg>
+
+                </div>
+              </div>
+            </div>
+          </fieldset>
+
+          <fieldset class="form__unit form__unit--imprassion">
+            <legend class="form__title">Ваше общее впечатление:</legend>
+
+            <ul>
+              <li class="form__impression">
+                <input type="radio" name="grid" value="positive" id="positive" checked class="visually-hidden form__input form__input--radio">
+                <label for="positive" class="form__text">
+                Скорее положительное</label>
+              </li>
+
+              <li class="form__impression">
+                <input type="radio" name="grid" value="negative" id="negative" class="visually-hidden form__input form__input--radio">
+                <label for="negative" class="form__text">
+                Скорее отрицательное</label>
+              </li>
+
+              <li class="form__impression">
+                <input type="radio" name="grid" value="noanswer" id="noanswer" class="visually-hidden form__input form__input--radio">
+                <label for="noanswer" class="form__text">
+                Затрудняюсь ответить</label>
+              </li>
+            </ul>
+          </fieldset>
+
+          <fieldset class="form__unit form__unit--sight">
+            <legend class="form__title">Посещенные<span class="form__break"><br></span>
+              достопримечательности:</legend>
+
+            <ul class="form__sight-wrapper">
+              <li class="form__sight">
+                <input type="checkbox" name="feature" value="Devil bridge" id="devil-bridge" class="visually-hidden form__input form__input--checkbox" checked>
+                <label for="devil-bridge" class="form__text">
+                Мост Дьявола</label>
+              </li>
+
+              <li class="form__sight">
+                <input type="checkbox" name="feature" value="Bell mountain" id="bell-mountain" class="visually-hidden form__input form__input--checkbox" checked>
+                <label for="bell-mountain" class="form__text">
+                Гора-Колокол</label>
+              </li>
+
+              <li class="form__sight">
+                <input type="checkbox" name="feature" value="Slide park" id="slide-park" class="visually-hidden form__input form__input--checkbox" checked>
+                <label for="slide-park" class="form__text">
+                Слайд-парк</label>
+              </li>
+
+              <li class="form__sight">
+                <input type="checkbox" name="feature" value="Red rock" id="red-rock" class="visually-hidden form__input form__input--checkbox">
+                <label for="red-rock" class="form__text">
+                Красные скалы</label>
+              </li>
+            </ul>
+          </fieldset>
+
+          <fieldset class="form__unit form__unit--emotion">
+            <legend class="form__title" for="user-emotion">Опишите свои эмоции:</legend>
+            <textarea class="form__text-field" name="comment" id="user-emotion" rows="6" placeholder="Опишите подробно все свои восторги"></textarea>
+            <div class="form__button-wrapper">
+              <button type="submit" class="form__button button">Отправить отзыв</button>
+              <div class="form__coment">* — обязательные поля</div>
+            </div>
+
+          </fieldset>
+
+
+        </form>
       </section>
 
     </main>
