--- a/source/form.html
+++ b/source/form.html
@@ -16,20 +16,20 @@
         <button class="main-nav__toggle main-nav__toggle--close" type="button"><span class="visually-hidden">Закрыть меню</span></button>
 
         <ul class="main-nav__list site-list">
-          <li class="site-list__item">
+          <li class="site-list__item site-list__item--main">
             <a href="index.html">Главная</a>
           </li>
-          <li class="site-list__item">
+          <li class="site-list__item site-list__item--photo">
             <a href="photo.html">Фото и видео</a>
           </li>
-          <li class="site-list__item">
-            <a>Форма отзыва</a>
+          <li class="site-list__item site-list__item--form">
+            <a href="form.html">Форма отзыва</a>
           </li>
-          <li class="site-list__item">
+          <li class="site-list__item site-list__item--html">
             <a href="#">HTML Academy</a>
           </li>
           <li class="main-nav__logo site-list__item site-list__item--logo">
-            <a class="main-nav__logo-image">
+            <a href="index.html" class="main-nav__logo-image">
               <picture>
                 <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
                 <source media="(min-width: 768px)" srcset="img/logo-sedona-tablet.svg">
@@ -86,7 +86,7 @@
               <div class="form__introduction form__introduction--contact">
                 <label for="user-number"><span class="form__contact-hide">Контактный</span> телефон*:</label>
                 <div class="form__contact-wrapper">
-                  <input class="form__contact-number form__field" id="user-number" type="text" name="phone-number" placeholder="Введите телефон" required>
+                  <input class="form__contact-number form__field" id="user-number" type="tel" name="phone-number" placeholder="Введите телефон" required>
                   <div class="form__contact-image">
                     <svg class="form__contact-image--phone" width="18" height="18"><use xlink:href="img/sprite.svg#icon-phone" aria-label="Иконка телефон"></use></svg>
                   </div>
@@ -95,7 +95,7 @@
               <div class="form__introduction form__introduction--contact">
                 <label for="user-email">Электронная почта*:</label>
                 <div class="form__contact-wrapper">
-                  <input class="form__contact-email form__field" id="user-email" type="text" name="email" placeholder="Введите e-mail" required>
+                  <input class="form__contact-email form__field" id="user-email" type="email" name="email" placeholder="Введите e-mail" required>
                   <div class="form__contact-image">
                     <svg class="form__contact-image--email" width="16" height="16"><use xlink:href="img/sprite.svg#icon-mail" aria-label="Иконка письмо"></use></svg>
                   </div>
@@ -129,7 +129,7 @@
           </fieldset>
 
           <fieldset class="form__unit form__unit--sight">
-            <legend class="form__title">Посещенные<span class="form__break"><br></span>
+            <legend class="form__title">Посещенные <span class="form__break"><br></span>
               достопримечательности:</legend>
 
             <ul class="form__sight-wrapper">
@@ -160,8 +160,8 @@
           </fieldset>
 
           <fieldset class="form__unit form__unit--emotion">
-            <legend class="form__title" for="user-emotion">Опишите свои эмоции:</legend>
-            <textarea class="form__text-field" name="comment" id="user-emotion" rows="6" placeholder="Опишите подробно все свои восторги"></textarea>
+            <legend class="form__title">Опишите свои эмоции:</legend>
+            <textarea class="form__text-field" name="comment" id="user-emotion" rows="7" placeholder="Опишите подробно все свои восторги"></textarea>
             <div class="form__button-wrapper">
               <input type="submit" class="form__button button" value="Отправить отзыв">
               <div class="form__coment">* — обязательные поля</div>
